memo/memo-with-references/tests/8-cache-param-cannot-be-self.stderr
error: cache param cannot be self
 --> tests/8-cache-param-cannot-be-self.rs:6:12
  |
6 |     #[memo(self)]
  |            ^^^^
