memo/memo-with-references/tests/8-cache-param-cannot-be-self.rs
use memo_with_references::memo;

struct Foo;

impl Foo {
    #[memo(self)]
    fn memome(&self) {}
}

fn main() {}
